<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsTotal"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalWearables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsCategory"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/wearableCategoryChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsYear"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/wearablesYearChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsBudget"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/sumPricesYearChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wearableStatsTop"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center" >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/topWearablesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wearableStatsLeast"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center" >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bottomWearablesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsColor"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/topColorsChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsTag"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/topTagsChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wearableStatsBrand"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/topBrandChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>